# sphinx-basic-ng

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .readthedocs.yml  MANIFEST.in  README.md  noxfile.py  setup.cfg
docs/: changelog.md  conf.py  expectations.md  glossary.md  goals.md  index.md  requirements.txt
docs/design/: index.md
docs/development/: index.md
docs/usage/: getting-started.md  skeleton.md
docs/usage/components/: breadcrumbs.md  edit-this-page.md  ethical-ads.md  index.md  logo.md  related-pages.md  search-hide.md  search-input.md  sidebar-toggles.md  view-this-page.md
example/: conf.py  index.md  requirements.txt  top-level-one.md  top-level-three.md  top-level-two.md
example/_static/: sample.css
example/_theme/sections/: announcement.html  footer-article.html  footer.html  header.html  sidebar-primary.html  sidebar-secondary.html
example/section-one/: page-one-one.md  page-one-two.md
example/section-two/: index.md  page-two-one.md
src/sphinx_basic_ng/: __init__.py  _navigation.py
src/sphinx_basic_ng/theme/basic-ng/: defindex.html  domainindex.html  genindex-single.html  genindex-split.html  (+10 more)
tests/barebones/: conf.py  index.md
tests/barebones/section-one/: index.md  page-one-one.md
tests/barebones/section-two/: index.md  page-two-one.md  page-two-two.md
tests/furo-like/: conf.py
tests/furo-like/_static/: basic.css
tests/furo-like/_templates/: page.html
tests/furo-like/section-two/: page-two-two.md
tests/pydata-like/: index.md
tests/pydata-like/_static/: basic.css
tests/pydata-like/_templates/: page.html
(+39 files in other folders)
