[metadata]
name = sphinx_basic_ng
version = attr:src.sphinx_basic_ng.__version__

author = Pradyun Gedam
author_email = mail@pradyunsg.me

description = A modern skeleton for Sphinx themes.
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/pradyunsg/sphinx-basic-ng
project_urls =
  Documentation = https://rtfd.io/sphinx-basic-ng/

classifiers =
  Framework :: Sphinx
  Framework :: Sphinx :: Theme
  License :: OSI Approved :: MIT License
  Environment :: Web Environment
  Intended Audience :: Developers
  Programming Language :: Python :: 3
  Operating System :: OS Independent
  Topic :: Documentation
  Topic :: Software Development :: Documentation

[options]
python_requires = >=3.7
install_requires =
  sphinx >=4.0
include_package_data = True
packages=find:
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
docs =
  furo
  myst-parser
  sphinx-copybutton
  sphinx-inline-tabs
  ipython

[options.entry_points]
sphinx.html_themes =
  basic-ng = sphinx_basic_ng
